tests/ui/unexpected-group.stderr
error: unexpected token
 --> $DIR/tests/ui/unexpected-group.rs:4:12
  |
4 |     fn [<a {} b>]() {}
  |            ^^
